Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21500

QKeyEvent::isAutoRepeat() : does not work with native child windows

    XMLWordPrintable

Details

    Description

      I wrote a little test program (attached).
      When I run the program and I press any button, i see "false". keyPressEvent is processed, but the autorepeat - no.
      I never see "true".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            laborer Sergey Gusarov
            Votes:
            7 Vote for this issue
            Watchers:
            14 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes